<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_info">This is a sample application to record audio.\n\nTo start recording press \&quot;Record\&quot; button, to stop recording press \&quot;Stop\&quot; button.</string>
    <string name="app_name">Audio Recorder</string>
	<string name="choose_format_title">Choose Audio Format</string>
	<string name="start_recording">Record</string>
	<string name="stop_recording">Stop</string>
	<string name="audio_format">Format</string>
	<string name="play">Play</string>
	<string name="enter">Go</string>
	<string name="back">←</string>
	<string name="forward">→</string>
</resources>
